--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -31,7 +31,7 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.13.0"
+    "@stencil/core": "~2.19.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
@@ -39,7 +39,7 @@
     "jest-cli": "^27.4.5",
     "puppeteer": "^10.0.0",
     "ag-grid-community": "^28.0.2",
-    "@stencil/sass": "~1.5.2",
+    "@stencil/sass": "~2.0.0",
     "@siemens/ix": "~1.1.0-beta.0"
   },
   "peerDependencies": {
