chore(core): remove post install script hook (#140)

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,11 +24,9 @@
     "dist/",
     "loader/",
     "src/**/*.md",
-    "scss/",
-    "scripts/post-install/post-install.mjs"
+    "scss/"
   ],
   "scripts": {
-    "postinstall": "node ./scripts/post-install/post-install.mjs",
     "build": "stencil build --docs --prod",
     "build:dev": "stencil build --docs",
     "lint": "eslint src/**/*{.ts,.tsx}",
