--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "ix",
-  "version": "1.1.0-beta.6",
+  "version": "1.1.0",
   "license": "MIT",
   "description": "Siemens iX monorepo",
   "author": "Siemens AG",
