--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -8,7 +8,7 @@
     "directory": "packages/aggrid"
   },
   "description": "AG Grid theme based on ix theme variables",
-  "version": "1.1.0-beta.0",
+  "version": "1.1.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -39,11 +39,11 @@
     "jest-cli": "^27.4.5",
     "puppeteer": "^10.0.0",
     "ag-grid-community": "^28.0.2",
-    "@stencil/sass": "~2.0.0",
-    "@siemens/ix": "~1.1.0-beta.0"
+    "@siemens/ix": "~1.1.0",
+    "@stencil/sass": "~2.0.0"
   },
   "peerDependencies": {
     "ag-grid-community": "^28.0.2",
-    "@siemens/ix": "~1.1.0-beta.0"
+    "@siemens/ix": "~1.1.0"
   }
 }
