--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -1,11 +1,11 @@
 {
-  "root": false,
-  "extends": [
-      "plugin:@stencil/recommended",
-      "./../../.eslintrc.json"
-  ],
+  "root": true,
+  "extends": ["plugin:@stencil/recommended", "ix"],
   "rules": {
     "@stencil/async-methods": 0,
-    "@stencil/strict-boolean-conditions": 0
+    "@stencil/strict-boolean-conditions": 0,
+    "react/jsx-no-bind": 0,
+    "react/jsx-uses-react": 0,
+    "react/react-in-jsx-scope": 0
   }
 }
