--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,7 +21,8 @@
     "build": "npm run clean && npm run compile",
     "clean": "rimraf dist && rimraf dist-transpiled",
     "compile": "rollup -c",
-    "tsc": "tsc -p ."
+    "tsc": "tsc -p .",
+    "lint": "eslint src"
   },
   "author": "",
   "license": "MIT",
@@ -31,6 +32,10 @@
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint-config-ix": "*",
+    "eslint-plugin-react": "^7.31.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
@@ -46,7 +51,7 @@
     "react-dom": ">=17.0.2"
   },
   "dependencies": {
-    "@siemens/ix-icons": "~1.0.0",
-    "@siemens/ix": "~1.1.0"
+    "@siemens/ix": "~1.1.0",
+    "@siemens/ix-icons": "~1.0.0"
   }
 }
