--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/test
 
+  lint:
+    runs-on: ubuntu-latest
+    needs: [install]
+    container:
+      image: node:18.12.1
+      env:
+        DEBIAN_FRONTEND: noninteractive
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/lint
+
   lint-commit-message:
     runs-on: ubuntu-latest
     needs: [install]
