--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,15 +1,15 @@
 name: Feature request
-description: Suggest an feature / idea for this project
+description: Suggest a feature / idea for this project
 labels: ['type: enhancement', 'triage']
 body:
   - type: markdown
     attributes:
       value: |
-        We appreciate your feedback on how to improve this project. Please be sure to include as much details & any resources if possible!
+        We appreciate your feedback on how to improve this project. Please be sure to include as much information and any neccessary resources!
   - type: textarea
     id: Suggestion
     attributes:
-      label: Suggestion / Feature Request
+      label: Suggestion / feature request
       description: Describe the feature(s) you would like to see added.
       placeholder: Tell us your suggestion
       value: 'Your suggestion here'
