--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
-  - name: 🤔 Support Question
+  - name: Support Question 🤔
     url: https://github.com/siemens/ix/discussions
-    about: This issue tracker is not for support questions. Please post your question on the Discussions section.
+    about: This issue tracker is not for support questions. Please post your question to the Discussions section.
