--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -19,16 +19,16 @@
     "@siemens/ix-icons": "~1.0.0"
   },
   "peerDependencies": {
-    "@angular/core": ">10.0.0"
+    "@angular/core": ">=13.3.12"
   },
   "devDependencies": {
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/compiler-cli": "^14.2.0",
-    "@angular/core": "^14.2.0",
+    "@angular/common": "v13-lts",
+    "@angular/compiler": "v13-lts",
+    "@angular/compiler-cli": "v13-lts",
+    "@angular/core": "v13-lts",
     "@siemens/ix": "~1.1.1",
     "fs-extra": "^10.1.0",
     "ng-packagr": "^14.2.0",
-    "typescript": "4.7.2"
+    "typescript": "4.6.4"
   }
 }
