--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,7 +70,7 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "~5.2.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
+    "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.26.1",
     "fs-extra": "^10.0.0",
     "http-server": "^14.1.1",
