feat(angular/modal-service): add data property for component context

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "sonarqube": "sonar-scanner",
     "visual-regression-ci": "npx playwright install chromium && yarn workspace @siemens/ix run test:e2e",
     "visual-regression": "docker run --rm --network host -v $(pwd):/work/ -w /work mcr.microsoft.com/playwright:v1.24.0-focal /bin/bash -c \"CI=TRUE npm run visual-regression-ci\"",
-    "test": "yarn workspace @siemens/ix run test",
+    "test": "turbo run test",
     "prepare": "husky install"
   },
   "dependencies": {
