--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "ng-packagr -c tsconfig.json",
     "fix-packagejson": "",
-    "test": "jest"
+    "test": "jest",
+    "docs": "typedoc"
   },
   "license": "MIT",
   "dependencies": {
@@ -35,6 +36,7 @@
     "jest-preset-angular": "^12.2.3",
     "ng-packagr": "^14.2.0",
     "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.21",
     "typescript": "4.6.4"
   }
 }
