--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/build-cache
       - uses: ./.github/workflows/actions/test
 
   lint:
