--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,13 +74,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [install]
+    needs: [build]
     container:
       image: node:18.12.1
       env:
         DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/build-cache
       - uses: ./.github/workflows/actions/test
 
   lint:
