--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -11,7 +11,8 @@
   "description": "Siemens iX for Angular",
   "scripts": {
     "build": "ng-packagr -c tsconfig.json",
-    "fix-packagejson": ""
+    "fix-packagejson": "",
+    "test": "jest"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,9 +27,14 @@
     "@angular/compiler": "v13-lts",
     "@angular/compiler-cli": "v13-lts",
     "@angular/core": "v13-lts",
+    "@jest/globals": "^29.3.1",
     "@siemens/ix": "~1.1.1",
+    "@types/jest": "^29.2.3",
     "fs-extra": "^10.1.0",
+    "jest": "^29.3.1",
+    "jest-preset-angular": "^12.2.3",
     "ng-packagr": "^14.2.0",
+    "ts-jest": "^29.0.3",
     "typescript": "4.6.4"
   }
 }
