--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -22,11 +22,12 @@
     "@docusaurus/preset-classic": "^2.1.0",
     "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/ix-icons": "~1.0.0",
-    "@siemens/ix": "~1.1.1",
-    "@siemens/ix-react": "~1.1.1",
-    "@siemens/ix-echarts": "~1.1.1",
     "@siemens/html-test-app": "~1.1.1",
+    "@siemens/ix": "~1.1.1",
+    "@siemens/ix-echarts": "~1.1.1",
+    "@siemens/ix-icons": "~1.0.0",
+    "@siemens/ix-react": "~1.1.1",
+    "@stackblitz/sdk": "^1.8.1",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
