feat: add stackblitz for angular

--- a/packages/documentation/static/code-runtime/react/tsconfig.json
+++ b/packages/documentation/static/code-runtime/react/tsconfig.json
@@ -14,7 +14,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": ["src"]
+    "jsx": "react"
+  }
 }
