feat: add html playground

--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app-typescript",
+  "name": "ix-angular-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
