--- a/.github/workflows/actions/visual-regression/action.yml
+++ b/.github/workflows/actions/visual-regression/action.yml
@@ -7,13 +7,19 @@ runs:
       run: yarn playwright install chromium
       shell: bash
 
-    - name: Run Playwright tests
+    - name: Run Playwright at @siemens/ix
       run: yarn workspace @siemens/ix run test:e2e
+      shell: bash
+
+    - name: Run Playwright at @siemens/ix-aggrid
+      run: yarn workspace @siemens/ix-aggrid run test:e2e
       shell: bash
 
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: ./packages/core/playwright-report/
+        path: |
+          ./packages/core/playwright-report/
+          ./packages/aggrid/playwright-report/
         retention-days: 2
