docs: support multiple files

--- a/packages/documentation/tsconfig.json
+++ b/packages/documentation/tsconfig.json
@@ -19,6 +19,6 @@
     "resolveJsonModule": true,
     "preserveSymlinks": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
+  "include": ["./**/*.ts", "./**/*.tsx", "scripts/generate-version.mjs"],
   "exclude": ["static/code-runtime"]
 }
