--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -14,7 +14,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-api": "ts-node -P tsconfig.json ./scripts/generate-api.ts",
+    "generate-api": "ts-node -P ./tsconfig.json ./scripts/generate-api.ts",
     "generate-version": "npm run generate-api && node ./scripts/generate-version.mjs"
   },
   "dependencies": {
