--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -24,10 +24,11 @@
     "loader/"
   ],
   "scripts": {
-    "build": "stencil build --docs",
+    "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
     "generate": "stencil generate",
-    "test:e2e": "playwright test --reporter html"
+    "test:e2e": "playwright test --reporter html",
+    "host-root": "http-server -a 127.0.0.1"
   },
   "dependencies": {
     "@stencil/core": "~2.19.2"
@@ -40,7 +41,8 @@
     "ag-grid-community": "^28.0.2",
     "@siemens/ix": "~1.2.1",
     "@stencil/sass": "~2.0.0",
-    "@playwright/test": "^1.24.1"
+    "@playwright/test": "^1.24.1",
+    "http-server": "^14.1.1"
   },
   "peerDependencies": {
     "ag-grid-community": "^28.0.2",
