--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,7 +67,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "animate.css": "~4.1.1",
     "autoprefixer": "10.4.5",
-    "bootstrap": "~5.2.0",
+    "bootstrap": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.26.1",
@@ -81,9 +81,6 @@
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
-  },
-  "peerDependencies": {
-    "bootstrap": "~5.2.0"
   },
   "config": {
     "commitizen": {
