--- a/packages/echarts/package.json
+++ b/packages/echarts/package.json
@@ -24,14 +24,14 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.4.0",
+    "echarts": "^5.4.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5",
-    "echarts": "^5.3.3"
+    "typescript": "^4.5.5"
   },
   "dependencies": {},
   "peerDependencies": {
