--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -14,7 +14,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-api": "node ./scripts/generate-api.mjs",
+    "generate-api": "ts-node -P ./tsconfig.json ./scripts/generate-api.ts",
     "generate-version": "npm run generate-api && node ./scripts/generate-version.mjs"
   },
   "dependencies": {
@@ -22,11 +22,11 @@
     "@docusaurus/preset-classic": "^2.1.0",
     "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/ix-icons": "~1.0.0",
-    "@siemens/ix": "~1.2.1",
-    "@siemens/ix-react": "~1.2.1",
-    "@siemens/ix-echarts": "~1.2.1",
     "@siemens/html-test-app": "~1.2.1",
+    "@siemens/ix": "~1.2.1",
+    "@siemens/ix-echarts": "~1.2.1",
+    "@siemens/ix-icons": "~1.0.0",
+    "@siemens/ix-react": "~1.2.1",
     "@stackblitz/sdk": "^1.8.1",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
@@ -45,6 +45,7 @@
     "@tsconfig/docusaurus": "^1.0.6",
     "@types/fs-extra": "^9.0.13",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "browserslist": {
