--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -44,6 +44,7 @@
     "@docusaurus/module-type-aliases": "^2.1.0",
     "@tsconfig/docusaurus": "^1.0.6",
     "@types/fs-extra": "^9.0.13",
+    "@types/rimraf": "^3.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
