--- a/packages/documentation/static/code-runtime/html/package.json
+++ b/packages/documentation/static/code-runtime/html/package.json
@@ -11,7 +11,7 @@
   ],
   "devDependencies": {
     "vite": "^3.1.0",
-    "@siemens/ix": "1.2.0-beta.0",
-    "@siemens/ix-icons": "~1.0.0"
+    "@siemens/ix": "^1",
+    "@siemens/ix-icons": "^1"
   }
 }
