--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -11,7 +11,9 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
-    "@siemens/ix-react": "^1.1.1"
+    "@siemens/ix": "^1",
+    "@siemens/ix-icons": "^1",
+    "@siemens/ix-react": "^1"
   },
   "scripts": {
     "start": "react-scripts start",
