--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -18,9 +18,9 @@
     "generate-version": "npm run generate-api && node ./scripts/generate-version.mjs"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.1.0",
-    "@docusaurus/preset-classic": "^2.1.0",
-    "@docusaurus/theme-live-codeblock": "^2.1.0",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
+    "@docusaurus/theme-live-codeblock": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "@siemens/html-test-app": "~1.2.1",
     "@siemens/ix": "~1.2.1",
@@ -30,6 +30,7 @@
     "@stackblitz/sdk": "^1.8.1",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^2.3.2",
     "docusaurus-plugin-sass": "^0.2.2",
     "execa": "^5.1.1",
     "prism-react-renderer": "^1.3.5",
@@ -41,7 +42,7 @@
     "sass": "^1.54.8"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.1.0",
+    "@docusaurus/module-type-aliases": "^2.2.0",
     "@tsconfig/docusaurus": "^1.0.6",
     "@types/fs-extra": "^9.0.13",
     "@types/rimraf": "^3.0.2",
