--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -82,6 +82,10 @@
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   },
+  "peerDependencies": {
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "~5.2.0"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
