--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Siemens iX bug report 📚
-labels: ['type: bug', 'triage']
+labels: ['triage']
 body:
   - type: markdown
     attributes:
