--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,5 @@ packages/html-test-app/src/public/additional-theme
 packages/documentation/docs/auto-generated/
 packages/documentation/static/auto-generated/
 packages/documentation/static/webcomponent-examples/*
+packages/documentation/static/blueprints/*
 !packages/documentation/static/versioned_examples/*/webcomponent-examples
