feat: integrate blueprints into documentation

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,8 @@
       "cache": false
     },
     "start": {
-      "cache": false
+      "dependsOn": ["^build"],
+      "cache": true
     },
     "lint": {
       "cache": false
