--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -72,6 +72,7 @@ jobs:
         if: ${{ github.event.inputs.deployment == 'prod' }}
         with:
           folder: ./packages/documentation/build
+          clean: true
           clean-exclude: version-*
 
       - name: Deploy dev instance 🚀
