--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -38,14 +38,14 @@
     "jest": "^27.4.5",
     "jest-cli": "^27.4.5",
     "puppeteer": "^10.0.0",
-    "ag-grid-community": "^28.0.2",
+    "ag-grid-community": "29.1.0",
     "@siemens/ix": "~1.3.0",
     "@stencil/sass": "~2.0.0",
     "@playwright/test": "^1.24.1",
     "http-server": "^14.1.1"
   },
   "peerDependencies": {
-    "ag-grid-community": "^28.0.2",
+    "ag-grid-community": "^28 || ^29",
     "@siemens/ix": "~1.3.0"
   }
 }
