--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "ix",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.2",
   "license": "MIT",
   "description": "Siemens iX monorepo",
   "author": "Siemens AG",
