--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -78,8 +78,7 @@
     "puppeteer": "^19.5.2",
     "sass": "^1.58.3",
     "start-server-and-test": "^1.14.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.0.0"
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
