--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -1,9 +1,11 @@
 {
   "root": true,
-  "extends": ["plugin:@stencil/recommended", "ix"],
+  "plugins": ["@stencil-community/eslint-plugin"],
+  "extends": ["plugin:@stencil-community/recommended", "ix"],
   "rules": {
-    "@stencil/async-methods": 0,
-    "@stencil/strict-boolean-conditions": 0,
+    "@stencil-community/async-methods": 0,
+    "@stencil-community/own-props-must-be-private": 0,
+    "@stencil-community/own-methods-must-be-private": 0,
     "react/jsx-no-bind": 0,
     "react/jsx-uses-react": 0,
     "react/react-in-jsx-scope": 0
