--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,9 +51,9 @@
   "devDependencies": {
     "@playwright/test": "^1.24.1",
     "@siemens/ix-icons": "~1.0.0",
-    "@stencil/angular-output-target": "^0.5.0",
     "@stencil-community/eslint-plugin": "^0.5.0",
     "@stencil-community/postcss": "^2.1.0",
+    "@stencil/angular-output-target": "^0.5.0",
     "@stencil/react-output-target": "^0.4.0",
     "@stencil/sass": "~3.0.0",
     "@testing-library/dom": "^8.11.0",
@@ -69,7 +69,7 @@
     "bootstrap": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint-config-ix": "*",
-    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react": "^7.32.2",
     "fs-extra": "^10.0.0",
     "http-server": "^14.1.1",
     "jest": "^27.5.1",
@@ -78,7 +78,8 @@
     "puppeteer": "^19.5.2",
     "sass": "^1.58.3",
     "start-server-and-test": "^1.14.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
