--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
-    "@stencil/core": "~2.19.2",
+    "@stencil/core": "^3.1.0",
     "animejs": "~3.2.1",
     "hyperlist": "^1.0.0",
     "luxon": "^3.0.1"
@@ -51,36 +51,35 @@
   "devDependencies": {
     "@playwright/test": "^1.24.1",
     "@siemens/ix-icons": "~1.0.0",
-    "@stencil/angular-output-target": "^0.4.0",
-    "@stencil/eslint-plugin": "^0.4.0",
-    "@stencil/postcss": "^2.0.0",
-    "@stencil/react-output-target": "^0.3.1",
-    "@stencil/sass": "~2.0.0",
+    "@stencil-community/eslint-plugin": "^0.5.0",
+    "@stencil-community/postcss": "^2.1.0",
+    "@stencil/angular-output-target": "^0.5.0",
+    "@stencil/react-output-target": "^0.4.0",
+    "@stencil/sass": "~3.0.0",
     "@testing-library/dom": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/animejs": "^3.1.4",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.5.2",
     "@types/luxon": "^3.0.0",
     "@types/mustache": "^4.1.1",
-    "@types/puppeteer": "^5.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "animate.css": "~4.1.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint-config-ix": "*",
-    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react": "^7.32.2",
     "fs-extra": "^10.0.0",
     "http-server": "^14.1.1",
-    "jest": "^27.4.5",
-    "jest-cli": "^27.4.5",
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1",
     "mustache": "^4.2.0",
-    "puppeteer": "^10.0.0",
-    "sass": "^1.54.0",
+    "puppeteer": "^19.5.2",
+    "sass": "^1.58.3",
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
