--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "documentation",
-  "version": "1.4.0",
+  "version": "1.5.0-beta.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -22,11 +22,11 @@
     "@docusaurus/preset-classic": "^2.2.0",
     "@docusaurus/theme-live-codeblock": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/html-test-app": "~1.4.0",
-    "@siemens/ix": "~1.4.0",
-    "@siemens/ix-echarts": "~1.4.0",
+    "@siemens/html-test-app": "~1.5.0-beta.0",
+    "@siemens/ix": "~1.5.0-beta.0",
+    "@siemens/ix-echarts": "~1.5.0-beta.0",
     "@siemens/ix-icons": "~1.0.0",
-    "@siemens/ix-react": "~1.4.0",
+    "@siemens/ix-react": "~1.5.0-beta.0",
     "@stackblitz/sdk": "^1.8.1",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
