--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,8 @@
     "@stencil/core": "^3.1.0",
     "animejs": "~3.2.1",
     "hyperlist": "^1.0.0",
-    "luxon": "^3.0.1"
+    "luxon": "^3.0.1",
+    "@types/luxon": "^3.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.24.1",
