chore: add basic license to private modules

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,7 @@
 {
   "name": "eslint-config-ix",
+  "license": "MIT",
+  "private": "true",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
