--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -2,6 +2,7 @@
   "name": "documentation",
   "version": "1.5.0-beta.1",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "npm run generate-api && docusaurus start",
