--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -15,13 +15,13 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-api": "ts-node -P ./tsconfig.json ./scripts/generate-api.ts",
+    "generate-api": "ts-node -P ./scripts/tsconfig.json ./scripts/generate-api.ts",
     "generate-version": "npm run generate-api && node ./scripts/generate-version.mjs"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
-    "@docusaurus/theme-live-codeblock": "^2.2.0",
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/theme-live-codeblock": "2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@siemens/html-test-app": "~1.5.0-beta.1",
     "@siemens/ix": "~1.5.0-beta.1",
@@ -39,12 +39,10 @@
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-toastify": "^9.0.7",
     "sass": "^1.54.8"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.2.0",
-    "@tsconfig/docusaurus": "^1.0.6",
+    "@docusaurus/module-type-aliases": "2.4.0",
     "@types/fs-extra": "^9.0.13",
     "@types/rimraf": "^3.0.2",
     "rimraf": "^3.0.2",
