--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -30,9 +30,6 @@
     "test:e2e": "playwright test --reporter html",
     "host-root": "http-server -a 127.0.0.1"
   },
-  "dependencies": {
-    "@stencil/core": "^3.2.1"
-  },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
@@ -40,6 +37,7 @@
     "puppeteer": "^19.5.2",
     "ag-grid-community": "29.1.0",
     "@siemens/ix": "~1.5.0-beta.3",
+    "@stencil/core": "^3.2.1",
     "@stencil/sass": "~3.0.0",
     "@playwright/test": "^1.32.1",
     "http-server": "^14.1.1"
