--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@siemens/ix": "~1.5.0",
-    "@siemens/ix-icons": "1.1.0-beta.1"
+    "@siemens/ix-icons": "^1.1.0"
   },
   "peerDependencies": {
     "@angular/core": ">=13.3.12"
