--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@siemens/ix": "~1.5.0",
-    "@siemens/ix-icons": "1.1.0-beta.1"
+    "@siemens/ix-icons": "^1.1.0"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
