ci: install rsync

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -35,9 +35,10 @@ jobs:
       #     echo "::error ::Be sure that the workflow runs on release/docs/v* and you checked confirm"
       #     exit -1
 
-      # - name: Install rsync
-      #   run: |
-      #     apt-get update && apt-get install -y rsync
+      - name: Install rsync
+        run: |
+          apt-get update && apt-get install -y rsync
+
       - uses: ./.github/workflows/actions/install
 
       - uses: actions/setup-node@v3
@@ -55,8 +56,6 @@ jobs:
           mkdir .tmp-brand
           cd .tmp-brand
           npm install @siemens/ix-brand-theme@^1.1.0 --no-save --legacy-peer-deps
-          ls -la
-          yarn link
 
       - name: 'Build documentation for prod instance'
         uses: ./.github/workflows/actions/build
@@ -69,30 +68,6 @@ jobs:
         if: ${{ github.event.inputs.deployment == 'prod' }}
         with:
           filter: 'documentation'
-
-      # - name: 'Download @siemens/ix-brand-theme'
-      #   run: |
-      #     rm .yarnrc
-      #     ROOT=$(pwd)
-      #     echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
-      #     echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
-      #     npm install @siemens/ix-brand-theme@^1.1.0 --no-save --legacy-peer-deps
-      #     rm .npmrc
-      #     cp -R ./node_modules/@siemens/ix-brand-theme ./packages/html-test-app/src/public/additional-theme
-      #     sed -i -e '/\"publishConfig\"/,/}/ d; /^$/d' ./packages/html-test-app/src/public/additional-theme/ix-brand-theme/package.json
-      #     rm ./packages/html-test-app/src/public/additional-theme/ix-brand-theme/package.json-e || true
-
-      # - name: 'Build documentation for dev instance'
-      #   if: ${{ github.event.inputs.deployment == 'dev' }}
-      #   run: |
-      #     yarn workspace @siemens/html-test-app run build
-      #     BASE_URL=/version-dev/ yarn workspace documentation run build
-
-      # - name: 'Build documentation for prod instance'
-      #   if: ${{ github.event.inputs.deployment == 'prod' }}
-      #   run: |
-      #     yarn workspace @siemens/html-test-app run build
-      #     BASE_URL=/ yarn workspace documentation run build
 
       - name: Deploy production instance 🚀
         uses: JamesIves/github-pages-deploy-action@v4
